<resources>

    <string name="app_name">Attendance Control</string>
    <string name="hello_world">Hello world!</string>
    <string name="alert">Alert</string>
    <string name="field_missing">The field %1$s is required.</string>
    <string name="please_wait">Please wait…</string>
    <string name="alert_button">OK</string>
    <string name="background">Background Image</string>
    <string name="subtitle">A Chaos Phoenix project</string>
    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="loginbt">SIGN IN</string>
    <string name="signup_label"><b>Don\'t have an account? Sign up!</b></string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="signup_button_label">SIGN UP</string>
    <string name="email_hint">E-mail</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="mes_enero">Enero</string>
    <string name="mes_febrero">Febrero</string>
    <string name="mes_marzo">Marzo</string>
    <string name="mes_abril">Abril</string>
    <string name="mes_mayo">Mayo</string>
    <string name="mes_junio">Junio</string>
    <string name="mes_julio">Julio</string>
    <string name="mes_agosto">Agosto</string>
    <string name="mes_septiembre">Septiembre</string>
    <string name="mes_octubre">Octubre</string>
    <string name="mes_noviembre">Noviembre</string>
    <string name="mes_diciembre">Diciembre</string>

    <string name="dia_1">Uno</string>
    <string name="dia_2">Dos</string>
    <string name="dia_3">Tres</string>
    <string name="dia_4">Cuatro</string>
    <string name="dia_5">Cinco</string>
    <string name="dia_6">Seis</string>
    <string name="dia_7">Siete</string>
    <string name="dia_8">Ocho</string>
    <string name="dia_9">Nueve</string>
    <string name="dia_10">Diez</string>
    <string name="dia_11">Once</string>
    <string name="dia_12">Doce</string>
    <string name="dia_13">Trece</string>
    <string name="dia_14">Catorce</string>
    <string name="dia_15">Quince</string>
    <string name="dia_16">Dieciséis</string>
    <string name="dia_17">Diecisiete</string>
    <string name="dia_18">Dieciocho</string>
    <string name="dia_19">Diecinueve</string>
    <string name="dia_20">Veinte</string>
    <string name="dia_21">Veintiuno</string>
    <string name="dia_22">Veintidós</string>
    <string name="dia_23">Veintitrés</string>
    <string name="dia_24">Veinticuatro</string>
    <string name="dia_25">Veinticinco</string>
    <string name="dia_26">Veintiséis</string>
    <string name="dia_27">Veintisiete</string>
    <string name="dia_28">Veintiocho</string>
    <string name="dia_29">Veintinueve</string>
    <string name="dia_30">Treinta</string>
    <string name="dia_31">Treinta y uno</string>

    <string name="dia_lunes">Lunes</string>
    <string name="dia_martes">Martes</string>
    <string name="dia_miercoles">Miércoles</string>
    <string name="dia_jueves">Jueves</string>
    <string name="dia_viernes">Viernes</string>
    <string name="dia_sabado">Sábado</string>
    <string name="dia_domingo">Domingo</string>
    <string name="err_num_trimestre_desconocido">Número de Trimestre desconocido</string>
    <string name="unknow">DESCONOCIDO</string>
    <string name="of">de</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash">Attendance Control</string>
    <string name="logo_app">Logo App</string>

    <!-- Reference to options menu -->
    <string name="route">Route</string>
    <string name="data">Data</string>
    <string name="password">Password</string>
    <string name="message">Message</string>
    <string name="student">Student</string>
    <string name="qr">QR</string>

    <!-- Reference to variable names -->
    <string name="txtroutes">ROUTES:</string>
    <string name="txtstudents">STUDENTS:</string>
    <string name="txtadd">Add route</string>
    <string name="txtname">Name</string>
    <string name="txtsurname">Surname</string>
    <string name="txtdni">DNI</string>
    <string name="txtroute">Route</string>
    <string name="txttelephone">Telephone</string>
    <string name="txtemail">Email</string>
    <string name="txtcomments">Comments</string>
    <string name="txtpassword">Password</string>
    <string name="txtnewpassword">New Password</string>
    <string name="txtrepeat">Repeat Password:</string>
    <string name="txtnamerouteall">Route Name</string>

    <!-- Reference to hint property -->
    <string name="accept">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="close">Close</string>
    <string name="modify">Modify</string>
    <string name="routename">Route Name</string>
    <string name="routecomments">Route Comments</string>
    <string name="search_hint">search_hint</string>

    <!-- Reference to txt names -->
    <string name="txtnamestudent">Name</string>
    <string name="txtnameuser">Name</string>
    <string name="txtcommentstudent">Comments about student</string>
    <string name="txtcommentuser">Comments about user</string>
    <string name="PasswordOld">Old Password</string>
    <string name="PasswordNew">New Password</string>
    <string name="PasswordRepeit">Repeat Password</string>
    <string name="txtsurname2">Surname</string>
    <string name="title_option_activity"> Attendance Control</string>
    <string name="title_activity_datauser">Data User</string>
    <string name="title_activity_datastudent">Data Student</string>
    <string name="title_activity_password">Change your password</string>
    <string name="title_activity_students">Students List</string>
    <string name="title_activity_routes">Route List</string>
    <string name="title_activity_addroute">Add Route</string>
    <string name="title_activity_son">List Son</string>

    <string name="logout">Logout</string>
    <string name="search">Search</string>

    <string name="new_password_doesnt_match">New password doesn\'t match</string>
    <string name="changing_password">Changing password…</string>
    <string name="logging_in">Logging in…</string>
    <string name="logging_out">Logging out…</string>
    <string name="signing_up">Signing up…</string>
    <string name="updating_info">Updating info…</string>
    <string name="number_kids">%1$s kids</string>
    <string name="loading">Loading…</string>
    <string name="logon_exception">You are not logged on, please logon to continue</string>
    <string name="sons_option">Sons</string>
    <string name="creating_route">Creating route…</string>
    <string name="deleting">Deleting…</string>
    <string name="creating_person">Creating person…</string>
    <string name="action_modify">Modify</string>
    <string name="action_delete">Delete</string>
    <string name="oldpassword_doesnt_match">Old password doesn\'t match</string>

</resources>
