<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sistemasikanguro.kangurooguard.ui.activities.LoginActivity">


    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackground"
        android:contentDescription="@string/background" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubTitle"
        android:text="@string/subtitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint"
            android:inputType="textVisiblePassword|textNoSuggestions">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/loginbutton"
        style="@style/AuthButton"
        android:onClick="loginClick"
        android:text="@string/loginbt"
        android:layout_below="@id/editTextLayout"/>

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:clickable="true"
        android:gravity="center"
        android:onClick="openSignUp"
        android:text="@string/signup_label"
        android:textColor="@color/accent" />

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/ic_ikanguro_logo"
        android:contentDescription="@string/logo_app"
        style="@style/AuthBottomLogo"/>

</RelativeLayout>
