<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chaosphoenix.kangurooguard.ui.activities.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackground"
        android:contentDescription="@string/background" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubTitle"
        android:text="@string/subtitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint"
            android:inputType="textVisiblePassword|textNoSuggestions">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_below="@id/editTextLayout"
        android:layout_alignBottom="@+id/cancelButton"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonDivider"/>

    <Button
        style="@style/AuthButton"
        android:id="@+id/signupButton"
        android:layout_below="@id/editTextLayout"
        android:layout_marginEnd="@dimen/void_dimen"
        android:layout_marginRight="@dimen/void_dimen"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_toStartOf="@id/buttonDivider"
        android:onClick="signUpClick"
        android:text="@string/signup_button_label" />

    <Button
        style="@style/AuthButton"
        android:id="@+id/cancelButton"
        android:layout_below="@id/editTextLayout"
        android:layout_marginLeft="@dimen/void_dimen"
        android:layout_marginStart="@dimen/void_dimen"
        android:layout_toEndOf="@id/buttonDivider"
        android:layout_toRightOf="@id/buttonDivider"
        android:onClick="cancelClick"
        android:text="@android:string/cancel" />

    <ImageView
        android:id="@+id/imageView"
        android:src="@mipmap/ic_warning_amber"
        android:contentDescription="@string/logo_app"
        style="@style/AuthBottomLogo"/>

</RelativeLayout>
