<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sistemasikanguro.kangurooguard.ui.activities.DataUser">
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_save"
        android:orderInCategory="2"
        android:title="@string/menu_save"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_new"
        android:orderInCategory="3"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom|withText" />
</menu>