<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borde"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ui.activities.PasswordActivity">

    <EditText
        android:id="@+id/passwordOld"
        style="@style/FormEditText"
        android:layout_weight="0.20"
        android:background="@drawable/rectangle_bis"
        android:gravity="center"
        android:hint="@string/PasswordOld"
        android:inputType="textPassword" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/newPassword"
        style="@style/FormEditText"
        android:layout_weight="0.20"
        android:background="@drawable/rectangle_bis"
        android:gravity="center"
        android:hint="@string/PasswordNew"
        android:inputType="textPassword" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/newPasswordRepeat"
        style="@style/FormEditText"
        android:layout_weight="0.20"
        android:background="@drawable/rectangle_bis"
        android:gravity="center"
        android:hint="@string/PasswordRepeit"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/bntListButtons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_weight="0.31">

        <Button
            style="@style/AuthButton"
            android:background="@drawable/rectangle_bis"
            android:id="@+id/btnaccept"
            android:layout_weight="1"
            android:text="@string/accept"
            android:onClick="changePassword" />

        <Button
            style="@style/AuthButton"
            android:background="@drawable/rectangle_bis"
            android:id="@+id/btncancel"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:onClick="cancelClick" />
    </LinearLayout>
</LinearLayout>